deploy/deploy-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flat-web
  name: flat-web
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flat-web
    spec:
      containers:
        - image: 'agoraflat/flat-web:dev-06101722'
          imagePullPolicy: IfNotPresent
          name: flat-web
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/localtime
              name: volume-localtime
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: flat-web-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: flat-web
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flat-web-ingress
  namespace: default
spec:
  rules:
    - host: flat-web-dev.whiteboard.agora.io
      http:
        paths:
          - backend:
              serviceName: flat-web-svc
              servicePort: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - flat-web-dev.whiteboard.agora.io
      secretName: flat
